--- a/Project.toml
+++ b/Project.toml
@@ -6,3 +6,4 @@ ImageAxes = "2803e5a7-5153-5ecf-9a86-9b4c37f5f5ac"
 ImageMorphology = "787d08f9-d448-5407-9aad-5290dd7ab264"
 ImageSegmentation = "80713f31-8817-5129-9cf8-209ff8fb23e1"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
