--- a/Project.toml
+++ b/Project.toml
@@ -2,6 +2,7 @@
 AxisArrays = "39de3d68-74b9-583c-8d2d-e117c070f3a9"
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+FreeTypeAbstraction = "663a7486-cb36-511b-a19d-713bb74d65c9"
 ImageAxes = "2803e5a7-5153-5ecf-9a86-9b4c37f5f5ac"
 ImageMetadata = "bc367c6b-8a6b-528e-b4bd-a4b897500b49"
 ImageMorphology = "787d08f9-d448-5407-9aad-5290dd7ab264"
