--- a/Project.toml
+++ b/Project.toml
@@ -1,3 +1,7 @@
+name = "SegmentationTools"
+uuid = "169f94bb-3e90-5bdf-856c-883fe665edaa"
+version = "0.0.1"
+
 [deps]
 AxisArrays = "39de3d68-74b9-583c-8d2d-e117c070f3a9"
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
