--- a/Project.toml
+++ b/Project.toml
@@ -12,10 +12,12 @@ ImageMetadata = "bc367c6b-8a6b-528e-b4bd-a4b897500b49"
 ImageMorphology = "787d08f9-d448-5407-9aad-5290dd7ab264"
 ImageSegmentation = "80713f31-8817-5129-9cf8-209ff8fb23e1"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
+KernelDensity = "5ab0869b-81aa-558d-bb23-cbf5423bbe9b"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 
 [targets]
-test = ["Test"]
+test = ["Test", "Distributions"]
