--- a/Project.toml
+++ b/Project.toml
@@ -4,8 +4,10 @@ version = "0.0.1"
 
 [deps]
 AxisArrays = "39de3d68-74b9-583c-8d2d-e117c070f3a9"
+ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+FixedPointNumbers = "53c48c17-4a7d-5ca2-90c5-79b7896eea93"
 FreeTypeAbstraction = "663a7486-cb36-511b-a19d-713bb74d65c9"
 ImageAxes = "2803e5a7-5153-5ecf-9a86-9b4c37f5f5ac"
 ImageMetadata = "bc367c6b-8a6b-528e-b4bd-a4b897500b49"
@@ -13,11 +15,12 @@ ImageMorphology = "787d08f9-d448-5407-9aad-5290dd7ab264"
 ImageSegmentation = "80713f31-8817-5129-9cf8-209ff8fb23e1"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 KernelDensity = "5ab0869b-81aa-558d-bb23-cbf5423bbe9b"
+MappedArrays = "dbb5928d-eab1-5f90-85c2-b9b0edb7c900"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [extras]
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test", "Distributions"]
+test = ["Test", "Distributions", "Colors", "FixedPointNumbers"]
