--- a/Project.toml
+++ b/Project.toml
@@ -17,6 +17,7 @@ Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 KernelDensity = "5ab0869b-81aa-558d-bb23-cbf5423bbe9b"
 MappedArrays = "dbb5928d-eab1-5f90-85c2-b9b0edb7c900"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [extras]
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
