--- a/Project.toml
+++ b/Project.toml
@@ -17,5 +17,6 @@ Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 KernelDensity = "5ab0869b-81aa-558d-bb23-cbf5423bbe9b"
 MappedArrays = "dbb5928d-eab1-5f90-85c2-b9b0edb7c900"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
+SimpleTraits = "699a6c99-e7fa-54fc-8d76-47d257e15c1d"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
