--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ AxisArrays = "39de3d68-74b9-583c-8d2d-e117c070f3a9"
 ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 FixedPointNumbers = "53c48c17-4a7d-5ca2-90c5-79b7896eea93"
 FreeTypeAbstraction = "663a7486-cb36-511b-a19d-713bb74d65c9"
 ImageAxes = "2803e5a7-5153-5ecf-9a86-9b4c37f5f5ac"
@@ -16,6 +17,7 @@ ImageSegmentation = "80713f31-8817-5129-9cf8-209ff8fb23e1"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 KernelDensity = "5ab0869b-81aa-558d-bb23-cbf5423bbe9b"
 MappedArrays = "dbb5928d-eab1-5f90-85c2-b9b0edb7c900"
+OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 SimpleTraits = "699a6c99-e7fa-54fc-8d76-47d257e15c1d"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
